--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.5",
     "node-sass": "^4.5.3",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
