--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux-webaudio": "^1.0.1",
     "react-ssc": "^0.0.77",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webfontloader": "^1.6.28"
   }
 }
