--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Yet another super simple site to serve as my portfolio",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --open --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js",
+    "start": "webpack-dev-server --host 0.0.0.0 --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,10 +25,12 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "css-loader": "^1.0.0",
-    "extract-loader": "^3.0.0",
     "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "sass-loader": "^7.1.0",
