--- a/.eslintrc
+++ b/.eslintrc
@@ -3,9 +3,13 @@
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
+      "experimentalObjectRestSpread": true,
+      "jsx": true
     }
   },
+  "plugins": [
+    "react-hooks"
+  ],
   "env": {
     "browser": true,
     "node": true,
@@ -18,8 +22,10 @@
     "quotes": [ "warn", "single" ],
     "guard-for-in": "off",
     "require-await": 1,
-    "react/prop-types": "off",
+    "react/prop-types": "warn",
     "react/display-name": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
